# Cadence-music-platform

./: .gitignore  LICENSE  next.config.js  package-lock.json  package.json  tailwind.config.ts
contracts/: Anchor.toml
contracts/programs/cadence/: Cargo.toml
contracts/programs/cadence/src/: lib.rs
contracts/tests/: cadence.ts
public/: banner-shot.html  banner.html
scripts/: snap-banner.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/fingerprint/: route.ts
src/app/api/fraud-check/: route.ts
src/app/api/narrate/: route.ts
src/app/api/stream/: route.ts
src/app/api/tracks/: route.ts
src/app/api/transcribe/: route.ts
src/app/api/upload/: route.ts
src/app/dashboard/: page.tsx
src/app/discover/: page.tsx
src/app/setup/: page.tsx
src/app/upload/: page.tsx
src/components/dashboard/: EarningsCard.tsx  PaymentHistory.tsx  StreamChart.tsx
src/components/discover/: SearchBar.tsx  TrackGrid.tsx
src/components/landing/: ArtistValueProp.tsx  Hero.tsx  HowItWorks.tsx  ListenerValueProp.tsx
src/components/layout/: Footer.tsx  Navbar.tsx  PlayerBar.tsx
src/components/ui/: Button.tsx  StreamBadge.tsx  TrackCard.tsx  WalletButton.tsx
src/components/upload/: DropZone.tsx  TrackForm.tsx  UploadProgress.tsx
src/hooks/: usePlayer.ts  useStream.ts  useTracks.ts
src/lib/: acrcloud.ts  anchor.ts  elevenlabs.ts  ipfs.ts  sardine.ts  solana.ts  utils.ts
src/providers/: WalletProvider.tsx
src/store/: playerStore.ts  tracksStore.ts
src/types/: index.ts
