[package]
name = "cadence"
version = "0.1.0"
description = "Cadence — Solana micropayment streaming program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cadence"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
